Fix path truncation

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -30,29 +30,31 @@ span.stat {
     vertical-align: middle;
 }
 
-div.collapsible {
+.collapsible {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 15em;
+    width: 100%;
+    //width: 15em;
 }
 
-div.collapsible:hover {
+.collapsible:hover {
     overflow: visible;
     text-overflow: inherit;
 }
 
-div.collapsible > span {
+.collapsible > span {
     background-color: white;
     position: relative;
 }
 
-div.collapsible:hover > span {
+.collapsible:hover > span {
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
     -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
     box-shadow: 1px 2px 3px rgba(0,0,0,.5);
 }
 
-table {
+table.reports-table {
+    table-layout: fixed;
     width: 100%;
 }
